$Id$                       -*-text-*-


Revision history for Net::DNS               
=============================
*** NOT RELEASED YET


Feature/Bug

  The Notify handler introduced in 0.63 did not set the OPCODE on the
  reply appropriately. This has been solved generically by allowing the
  "Headermask" that is returned as 4th element by the reply or notify
  handler in the nameserver also allows for the opcode to be set.
  e.g. as in return ("NXDOMAIN",[],[],[],{ opcode => "NS_NOTIFY_OP" }
  );


*** 0.63, 8 Feb 2008

This version contains a Security Fix.

Feature NotifyHandler in Nameserver
			
  The NotifyHandler is a new attribute to the nameserver used in the
  same way as the ReplyHandler except that it is executed when the
  opcode is NS_NOTIFY (RFC1996). It takes the same arguments as the
  reply handler (i.e. $qname, $qclass, $qtype, $peerhost, and $query).
  Corrections made in the documentation.

Fix rt.cpan.org #32937: 5.11 introduces new warning on uc(undef)

  The patch supplied fixes for methods where undefined arguments were
  likely. For methods where undefined arguments don't make the warning
  will be printed.


Fix rt.cpan.org #32147: Default LocalAddr broken in Net::DNS::Nameserver 0.62

  Listen on the default address if LocalAddr not defined.


Fix rt.cpan.org #30316  Security issue with Net::DNS Resolver.

  Net/DNS/RR/A.pm in Net::DNS 0.60 build 654 allows remote attackers
  to cause a denial of service (program "croak") via a crafted DNS
  response (http://nvd.nist.gov/nvd.cfm?cvename=CVE-2007-6341). Packet
  parsing routines are now enclosed in eval blocks to trap exception
  and avoid premature termination of user program.

Bug: mbox-dname and txt-dname were not allowed to be empty in the RP RR.
   Fix by Peter Koch


*** 0.62, 28 December 2007

Features: Move of some functionality out of the Packet to the Question
   and RR classes; parsing of elements in the packet is now performed
   by calling the appropriate subclasses.
